--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,7 @@ img {
 }
 body {
  
-    background-image: url("imagenes/fondo.jpg");
+    background-image: url("imagenes/fondo.jpeg");
   }
 
 nav ul {
